# tenra-Registry

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: secret-scan.yml  tooling-security.yml  validation.yml
apps/desktopapp/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktopapp/assets/: icon.icns
apps/desktopapp/scripts/: build.mjs  dev.mjs  install-macos.mjs
apps/desktopapp/src/: App.tsx  main.ts  styles.css
apps/desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktopapp/src-tauri/src/: main.rs
apps/mobileapp/: App.tsx  app.json  package.json  tsconfig.json
apps/webapp/: next.config.ts  package.json
apps/webapp/app/: globals.css  layout.tsx  page.tsx
apps/webapp/prisma/: schema.prisma  seed.mjs
apps/webapp/scripts/: db-check.mjs  (+2 more)
archive/: README.md
docs/: DEVELOPER_GUIDE.md  HANDOFFS.md  HANDOFF_REGISTRY.md  IMPORT_GUIDE.md  MODULE_MANIFEST.md  REPO_MAP.md  STABILITY_CHECKLIST.md  app-runtime-manifest.json  cross-app-handoffs.md
fixtures/handoffs/: assembly-document-request.json  duplicate-reconciliation-ledger-export.json  ledger-export.json
scripts/: analyze-build.mjs  audit-maintainability.mjs  bootstrap.mjs  check-env.mjs  check-packages.mjs  doctor.mjs  generate-handoff-registry.mjs  maintainability.config.json  prepare-postgres.mjs  suite-smoke.mjs  validate-handoffs.mjs  verify-app-runtime-manifest.mjs  verify-handoff-replay.mjs
scripts/contracts/: registry-contracts.json
(+83 files in other folders)
